# faze_2

./: CMakeLists.txt
-ph3/include/: child.h
-ph3/src/: book.cpp  buy.cpp  child.cpp  teacher.cpp
AP/: CMakeLists.txt  readme.md  settings.json  گزارشکار فاز دوم.docx
AP/include/: device.h  kindergarten.h  person.h
AP/src/: book.cpp  child.cpp  device.cpp  kindergarten.cpp  main.cpp  person.cpp  teacher.cpp
finalqt/: CMakeLists.txt
finalqt/include/: book.h  buy.h  createmanagerdialog.h  mainwindow.h
finalqt/src/: app  child.cpp  createmanagerdialog.cpp  kindergarten.cpp  mainwindow.cpp  mainwindow.ui
include/: book.h  child.h  device.h  person.h
ph3/: readme.md
ph3/include/: buy.h  teacher.h
ph3/src/: device.cpp  kindergarten.cpp  main.cpp
src/: book.cpp  child.cpp  device.cpp  main.cpp  person.cpp
